--- a/computer_vision/image_classification_from_scratch.ipynb
+++ b/computer_vision/image_classification_from_scratch.ipynb
@@ -49,7 +49,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "BB9_Mc8Z_6X7"
       },
@@ -78,11 +78,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "5EherTmY_6X-"
+        "id": "5EherTmY_6X-",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "dfb781f3-a3c5-4d81-b475-622abaf567ec"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+            "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+            "100  786M  100  786M    0     0   115M      0  0:00:06  0:00:06 --:--:-- 69.9M\n"
+          ]
+        }
+      ],
       "source": [
         "!curl -O https://download.microsoft.com/download/3/E/1/3E1C3F21-ECDB-4869-8368-6DEBA77B919F/kagglecatsanddogs_5340.zip"
       ]
@@ -91,9 +105,21 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "sPm_VV_c_6X_"
+        "id": "sPm_VV_c_6X_",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b5a88568-b205-4767-eb63-6b2e63d3019f"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "replace PetImages/Cat/0.jpg? [y]es, [n]o, [A]ll, [N]one, [r]ename: "
+          ]
+        }
+      ],
       "source": [
         "!unzip -q kagglecatsanddogs_5340.zip\n",
         "!ls"
@@ -402,18 +428,26 @@
       },
       "outputs": [],
       "source": [
-        "\n",
         "def make_model(input_shape, num_classes):\n",
+        "  \"\"\" This function creates a Keras model with multiple layers for image classification.\n",
+        "  Parameters:\n",
+        "  input_shape (tuple): Shape of the input images. For example, (img_height, img_width, channels).\n",
+        "  num_classes (int): Number of output classes.\n",
+        "\n",
+        "  Returns:\n",
+        "  keras.Model: A Keras model instance.\n",
+        "  \"\"\"\n",
         "    inputs = keras.Input(shape=input_shape)\n",
         "\n",
         "    # Entry block\n",
-        "    x = layers.Rescaling(1.0 / 255)(inputs)\n",
-        "    x = layers.Conv2D(128, 3, strides=2, padding=\"same\")(x)\n",
-        "    x = layers.BatchNormalization()(x)\n",
-        "    x = layers.Activation(\"relu\")(x)\n",
+        "    x = layers.Rescaling(1.0 / 255)(inputs)  # Rescale the input values to [0, 1]\n",
+        "    x = layers.Conv2D(128, 3, strides=2, padding=\"same\")(x)  # First convolution layer\n",
+        "    x = layers.BatchNormalization()(x)  # Normalize the activations of the previous layer at each batch\n",
+        "    x = layers.Activation(\"relu\")(x)  # Apply ReLU activation function\n",
         "\n",
         "    previous_block_activation = x  # Set aside residual\n",
         "\n",
+        "    # Loop over a list of number of filters for each block\n",
         "    for size in [256, 512, 728]:\n",
         "        x = layers.Activation(\"relu\")(x)\n",
         "        x = layers.SeparableConv2D(size, 3, padding=\"same\")(x)\n",
@@ -436,14 +470,14 @@
         "    x = layers.BatchNormalization()(x)\n",
         "    x = layers.Activation(\"relu\")(x)\n",
         "\n",
-        "    x = layers.GlobalAveragePooling2D()(x)\n",
+        "    x = layers.GlobalAveragePooling2D()(x)  # This layer is used for 2D spatial data.\n",
         "    if num_classes == 2:\n",
         "        units = 1\n",
         "    else:\n",
         "        units = num_classes\n",
         "\n",
-        "    x = layers.Dropout(0.25)(x)\n",
-        "    # We specify activation=None so as to return logits\n",
+        "    x = layers.Dropout(0.25)(x)  # Apply dropout\n",
+        "        # We specify activation=None so as to return logits\n",
         "    outputs = layers.Dense(units, activation=None)(x)\n",
         "    return keras.Model(inputs, outputs)\n",
         "\n",
